# PathTracer

./: .gitignore  CMakeLists.txt  README.md
include/: AABB.h  BVH.h  ConfigHelper.h  ConstantHelper.h  Environment.h  Material.h  Mesh.h  Point.h  Ray.h  RenderWidget.h  SampleHelper.h  Scene.h  Texture.h  Triangle.h  UtilsHelper.h
scene/: README.md
scene/cornellbox/: cornellbox.mtl
scene/diningroom/: diningroom.mtl
src/: AABB.cpp  BVH.cpp  Environment.cpp  Material.cpp  Mesh.cpp  Point.cpp  Ray.cpp  RenderWidget.cpp  Scene.cpp  Texture.cpp  Triangle.cpp  main.cpp
